manifest/gateway/base/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  name: gateway # cilium adds a prefix "cilium-gateway-*"
  namespace: gateway
  annotations:
    cert-manager.io/cluster-issuer: staging-cluster-issuer # when testing to avoid Let's Encrypt rate limit of `production-cluster-issuer`

spec:
  gatewayClassName: cilium
  # NOTE: order is important as kustomize targets indecies of listners
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "donation-app.test"
      allowedRoutes:
        namespaces:
          from: All # required for letsecrypt

    - name: http-subdomain-all
      protocol: HTTP
      port: 80
      hostname: "*.donation-app.test"
      allowedRoutes:
        namespaces:
          from: All # required for letsecrypt

    - name: https
      protocol: HTTPS
      port: 443
      hostname: "donation-app.test"
      allowedRoutes:
        namespaces:
          from: All # required for letsecrypt
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: tls-certificate-donation-app
            group: ""

    - name: https-api
      protocol: HTTPS
      port: 443
      hostname: "api.donation-app.test"
      allowedRoutes:
        namespaces:
          from: All # required for letsecrypt
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: tls-certificate-donation-app
            group: ""

    - name: https-k8s
      protocol: HTTPS
      port: 443
      hostname: "*.k8s.donation-app.test"
      allowedRoutes:
        namespaces:
          from: All # required for letsecrypt
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: tls-certificate-donation-app
            group: ""

    - name: https-auth
      protocol: HTTPS
      port: 443
      hostname: "auth.donation-app.test"
      allowedRoutes:
        namespaces:
          from: All # required for letsecrypt
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: tls-certificate-donation-app
            group: ""

    - name: http-redirect-ip-access
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All # required for letsecrypt
