manifest/gateway/base/direct-ip-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: ip-redirect
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
      sectionName: direct-ip

  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            hostname: "localhost"
            scheme: http
            statusCode: 301
