manifest/gateway/base/http-route--web-server.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: http-web
spec:
  parentRefs:
    - name: gateway

  hostnames:
    - donation-app.test
  
  rules:
    - backendRefs:
        - name: web-server
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
