manifest/gateway/base/http-route.yml
# redirect HTTP to HTTPS
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: http-redirect
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
      sectionName: http

  hostnames:
    - donation-app.test

  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: http-redirect-subdomain
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
      sectionName: http

  hostnames:
    - "*.donation-app.test"

  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301

    # - backendRefs:
    #     # kubernetees service
    #     - name: web-server
    #       port: 80
    #   matches:
    #     - path:
    #         type: PathPrefix
    #         value: /
