manifest/gateway/base/https-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: https-web-server
spec:
  parentRefs:
    - name: gateway
      namespace: nginx-gateway
      sectionName: https

  hostnames:
    - donation-app.test

  rules:
    - backendRefs:
        # kubernetees service
        - name: web-server
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: https-api
spec:
  parentRefs:
    - name: gateway
      namespace: nginx-gateway
      sectionName: https-api

  hostnames:
    - api.donation-app.test

  rules:
    - backendRefs:
        # kubernetees service
        - name: web-server
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: https-k8s-dashboard
  namespace: kubernetes-dashboard
spec:
  parentRefs:
    - name: gateway
      namespace: nginx-gateway
      sectionName: https-k8s

  hostnames:
    - dashboard.k8s.donation-app.test

  rules:
    - backendRefs:
        # kubernetees service
        - name: kubernetes-dashboard-kong-proxy
          namespace: kubernetes-dashboard
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: https-k8s-longhorn
  namespace: longhorn-system
spec:
  parentRefs:
    - name: gateway
      namespace: nginx-gateway
      sectionName: https-k8s

  hostnames:
    - longhorn.k8s.donation-app.test

  rules:
    - backendRefs:
        # kubernetees service
        - name: longhorn-frontend
          namespace: longhorn-system
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: https-auth
  namespace: auth
spec:
  parentRefs:
    - name: gateway
      namespace: nginx-gateway
      sectionName: https-auth

  hostnames:
    - auth.donation-app.test

  rules:
    - backendRefs:
        - name: kratos-public
          namespace: auth
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /app
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: "/" # "/app" to "/" for internal service

    - backendRefs:
        - name: auth-ui
          namespace: auth
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
