manifest/gateway/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
    - host: donation-app.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-server 
                port:
                  number: 80
